// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Timeline demos > demo: Alternate 1`] = `
"<ul class="ant-timeline ant-timeline-alternate">
  <li class="ant-timeline-item">
    <div class="ant-timeline-item-label">2015-09-01</div>
    <div class="ant-timeline-item-tail"></div>
    <div class="ant-timeline-item-head ant-timeline-item-head-blue"></div>
    <div class="ant-timeline-item-content">Create a services site</div>
  </li>
  <li class="ant-timeline-item">
    <div class="ant-timeline-item-label">2015-09-01</div>
    <div class="ant-timeline-item-tail"></div>
    <div class="ant-timeline-item-head ant-timeline-item-head-green"></div>
    <div class="ant-timeline-item-content">Solve initial network problems</div>
  </li>
  <li class="ant-timeline-item">
    <div class="ant-timeline-item-label">2015-09-01</div>
    <div class="ant-timeline-item-tail"></div>
    <div class="ant-timeline-item-head ant-timeline-item-head-blue ant-timeline-item-head-custom"><span style="font-size: 16px;">☆</span></div>
    <div class="ant-timeline-item-content"> Technical testing </div>
  </li>
  <li class="ant-timeline-item">
    <div class="ant-timeline-item-label">2015-09-01</div>
    <div class="ant-timeline-item-tail"></div>
    <div class="ant-timeline-item-head ant-timeline-item-head-red"></div>
    <div class="ant-timeline-item-content">Network problems being solved</div>
  </li>
  <!--v-if-->
</ul>"
`;

exports[`Timeline demos > demo: Basic 1`] = `
"<ul class="ant-timeline">
  <li class="ant-timeline-item">
    <!--v-if-->
    <div class="ant-timeline-item-tail"></div>
    <div class="ant-timeline-item-head ant-timeline-item-head-blue"></div>
    <div class="ant-timeline-item-content">Create a services site 2015-09-01</div>
  </li>
  <li class="ant-timeline-item">
    <!--v-if-->
    <div class="ant-timeline-item-tail"></div>
    <div class="ant-timeline-item-head ant-timeline-item-head-blue"></div>
    <div class="ant-timeline-item-content">Solve initial network problems 2015-09-01</div>
  </li>
  <li class="ant-timeline-item">
    <!--v-if-->
    <div class="ant-timeline-item-tail"></div>
    <div class="ant-timeline-item-head ant-timeline-item-head-blue"></div>
    <div class="ant-timeline-item-content">Technical testing 2015-09-01</div>
  </li>
  <li class="ant-timeline-item">
    <!--v-if-->
    <div class="ant-timeline-item-tail"></div>
    <div class="ant-timeline-item-head ant-timeline-item-head-blue"></div>
    <div class="ant-timeline-item-content">Network problems being solved 2015-09-01</div>
  </li>
  <!--v-if-->
</ul>"
`;

exports[`Timeline demos > demo: Color 1`] = `
"<ul class="ant-timeline">
  <li class="ant-timeline-item">
    <!--v-if-->
    <div class="ant-timeline-item-tail"></div>
    <div class="ant-timeline-item-head ant-timeline-item-head-blue"></div>
    <div class="ant-timeline-item-content">Create a services site 2015-09-01</div>
  </li>
  <li class="ant-timeline-item">
    <!--v-if-->
    <div class="ant-timeline-item-tail"></div>
    <div class="ant-timeline-item-head ant-timeline-item-head-green"></div>
    <div class="ant-timeline-item-content">Solve initial network problems 2015-09-01</div>
  </li>
  <li class="ant-timeline-item">
    <!--v-if-->
    <div class="ant-timeline-item-tail"></div>
    <div class="ant-timeline-item-head ant-timeline-item-head-red"></div>
    <div class="ant-timeline-item-content">Technical testing 2015-09-01</div>
  </li>
  <li class="ant-timeline-item">
    <!--v-if-->
    <div class="ant-timeline-item-tail"></div>
    <div class="ant-timeline-item-head ant-timeline-item-head-gray"></div>
    <div class="ant-timeline-item-content">Network problems being solved 2015-09-01</div>
  </li>
  <li class="ant-timeline-item">
    <!--v-if-->
    <div class="ant-timeline-item-tail"></div>
    <div class="ant-timeline-item-head" style="border-color: rgb(0, 204, 255); color: rgb(0, 204, 255);"></div>
    <div class="ant-timeline-item-content">Custom color 2015-09-01</div>
  </li>
  <!--v-if-->
</ul>"
`;

exports[`Timeline demos > demo: Custom 1`] = `
"<ul class="ant-timeline">
  <li class="ant-timeline-item">
    <!--v-if-->
    <div class="ant-timeline-item-tail"></div>
    <div class="ant-timeline-item-head ant-timeline-item-head-blue"></div>
    <div class="ant-timeline-item-content">Create a services site 2015-09-01</div>
  </li>
  <li class="ant-timeline-item">
    <!--v-if-->
    <div class="ant-timeline-item-tail"></div>
    <div class="ant-timeline-item-head ant-timeline-item-head-blue"></div>
    <div class="ant-timeline-item-content">Solve initial network problems 2015-09-01</div>
  </li>
  <li class="ant-timeline-item">
    <!--v-if-->
    <div class="ant-timeline-item-tail"></div>
    <div class="ant-timeline-item-head ant-timeline-item-head-red ant-timeline-item-head-custom"><span style="font-size: 16px; color: rgb(22, 119, 255); display: inline-flex; align-items: center; justify-content: center; width: 1em; height: 1em;">⏰</span></div>
    <div class="ant-timeline-item-content"> Technical testing 2015-09-01 </div>
  </li>
  <li class="ant-timeline-item">
    <!--v-if-->
    <div class="ant-timeline-item-tail"></div>
    <div class="ant-timeline-item-head ant-timeline-item-head-blue"></div>
    <div class="ant-timeline-item-content">Network problems being solved 2015-09-01</div>
  </li>
  <!--v-if-->
</ul>"
`;

exports[`Timeline demos > demo: Pending 1`] = `
"<div>
  <ul class="ant-timeline ant-timeline-pending">
    <li class="ant-timeline-item">
      <!--v-if-->
      <div class="ant-timeline-item-tail"></div>
      <div class="ant-timeline-item-head ant-timeline-item-head-blue"></div>
      <div class="ant-timeline-item-content">Create a services site 2015-09-01</div>
    </li>
    <li class="ant-timeline-item">
      <!--v-if-->
      <div class="ant-timeline-item-tail"></div>
      <div class="ant-timeline-item-head ant-timeline-item-head-blue"></div>
      <div class="ant-timeline-item-content">Solve initial network problems 2015-09-01</div>
    </li>
    <li class="ant-timeline-item">
      <!--v-if-->
      <div class="ant-timeline-item-tail"></div>
      <div class="ant-timeline-item-head ant-timeline-item-head-blue"></div>
      <div class="ant-timeline-item-content">Technical testing 2015-09-01</div>
    </li>
    <li class="ant-timeline-item ant-timeline-item-pending">
      <div class="ant-timeline-item-tail"></div>
      <div class="ant-timeline-item-head ant-timeline-item-head-blue"><span role="img" aria-label="loading" class="anticon anticon-loading ant-timeline-loading-icon"><svg focusable="false" class="anticon-spin" data-icon="loading" width="1em" height="1em" fill="currentColor" aria-hidden="true" viewBox="0 0 1024 1024"><path d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"></path></svg></span></div>
      <div class="ant-timeline-item-content">Recording...</div>
    </li>
  </ul><button class="ant-btn ant-btn-solid ant-btn-md" style="margin-top: 16px;" type="button">
    <!--v-if-->
    <!--v-if--><span class="ant-btn-content"> Toggle Reverse </span>
  </button>
</div>"
`;

exports[`Timeline demos > demo: Right 1`] = `
"<ul class="ant-timeline ant-timeline-right">
  <li class="ant-timeline-item">
    <!--v-if-->
    <div class="ant-timeline-item-tail"></div>
    <div class="ant-timeline-item-head ant-timeline-item-head-blue"></div>
    <div class="ant-timeline-item-content">Create a services site 2015-09-01</div>
  </li>
  <li class="ant-timeline-item">
    <!--v-if-->
    <div class="ant-timeline-item-tail"></div>
    <div class="ant-timeline-item-head ant-timeline-item-head-blue"></div>
    <div class="ant-timeline-item-content">Solve initial network problems 2015-09-01</div>
  </li>
  <li class="ant-timeline-item">
    <!--v-if-->
    <div class="ant-timeline-item-tail"></div>
    <div class="ant-timeline-item-head ant-timeline-item-head-red ant-timeline-item-head-custom"><span style="font-size: 16px; display: inline-flex; align-items: center; justify-content: center; width: 1em; height: 1em;">⏰</span></div>
    <div class="ant-timeline-item-content"> Technical testing 2015-09-01 </div>
  </li>
  <li class="ant-timeline-item">
    <!--v-if-->
    <div class="ant-timeline-item-tail"></div>
    <div class="ant-timeline-item-head ant-timeline-item-head-blue"></div>
    <div class="ant-timeline-item-content">Network problems being solved 2015-09-01</div>
  </li>
  <!--v-if-->
</ul>"
`;
